fix(rosta): styling issues on mobile

--- a/src/app/components/calendar/calendar.component.scss
+++ b/src/app/components/calendar/calendar.component.scss
@@ -51,7 +51,7 @@
 
         .day-container {
             position: relative;
-            height: 100%;
+            height: calc(100% - 56px);
             width: 100%;
             display: block;
             background-color: white;
